mudanças no tema

--- a/assets/scss/partials/layout/search.scss
+++ b/assets/scss/partials/layout/search.scss
@@ -33,7 +33,7 @@
         padding: 40px 20px 20px;
         border-radius: var(--card-border-radius);
         background-color: var(--card-background);
-        box-shadow: var(--shadow-l1);
+        box-shadow: rgb(12, 142, 54) 5px 5px 0px 0px;
         color: var(--card-text-color-main);
         width: 100%;
         border: 0;
