--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -1,7 +1,7 @@
 <div class="article-details">
-    {{ if .Params.categories }}
+    {{ if .Params.categorias }}
     <header class="article-category">
-        {{ range (.GetTerms "categories") }}
+        {{ range (.GetTerms "categorias") }}
             <a href="{{ .RelPermalink }}" {{ with .Params.style }}style="background-color: {{ .background }}; color: {{ .color }};"{{ end }}>
                 {{ .LinkTitle }}
             </a>
