--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         background-color: var(--card-background);
-        box-shadow: var(--shadow-l1);
+        box-shadow: rgb(12, 142, 54) 5px 5px 0px 0px;
         border-radius: var(--card-border-radius);
         overflow: hidden;
 
@@ -210,9 +210,9 @@
         transition: box-shadow 0.3s ease;
         background-color: var(--card-background);
 
-        &:hover {
-            box-shadow: var(--shadow-l2);
-        }
+        // &:hover {
+        //     box-shadow: var(--shadow-l2);
+        // }
 
         &.has-image {
             .article-details {
