--- a/assets/scss/partials/footer.scss
+++ b/assets/scss/partials/footer.scss
@@ -19,12 +19,12 @@ footer.site-footer {
     }
 
     .powerby {
-        color: var(--body-text-color);
+        color: var(--accent-color-darker);
         font-weight: normal;
-        font-size: 1.2rem;
+        font-size: 1rem;
 
         a {
-            color: var(--body-text-color);
+            color: var(--accent-color);
         }
     }
 }
