--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -82,7 +82,7 @@
 }
 
 .widget--toc {
-    background-color: var(--card-background);
+    background-color: none;
     border-radius: var(--card-border-radius);
     box-shadow: var(--shadow-l1);
     display: flex;
