--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -2,6 +2,7 @@
     &.sticky {
         @include respond(md) {
             position: sticky;
+            top: 45px;
         }
     }
 }
@@ -35,7 +36,7 @@
     }
 
     &.sticky {
-        top: 0;
+        top: 45px;
     }
 
     &.compact {
@@ -53,7 +54,7 @@
             }
 
             .site-name {
-                font-size: 1.4rem;
+                font-size: 3rem;
 
                 @include respond(2xl) {
                     font-size: 1.75rem;
@@ -74,7 +75,7 @@
     gap: var(--widget-separation);
 
     &.sticky {
-        top: 0;
+        top: 45px;
     }
 
     @include respond(lg) {
@@ -132,7 +133,8 @@
     .site-name {
         color: var(--accent-color);
         margin: 0;
-        font-size: 1.6rem;
+        font-size: 3.5rem;
+        font-family: 'Mitr';
 
         @include respond(2xl) {
             font-size: 1.8rem;
