--- a/assets/scss/partials/widgets.scss
+++ b/assets/scss/partials/widgets.scss
@@ -20,11 +20,11 @@
         gap: 10px;
 
         a {
-            background: var(--card-background);
+            background: var(--accent-color-darker);
             box-shadow: var(--shadow-l1);
             border-radius: var(--tag-border-radius);
             padding: 8px 20px;
-            color: var(--card-text-color-main);
+            color: var(--card-background);
             font-size: 1.4rem;
             transition: box-shadow 0.3s ease;
 
