--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,5 +1,5 @@
-$defaultTagBackgrounds: #8ea885, #df7988, #0177b8, #ffb900, #6b69d6;
-$defaultTagColors: #fff, #fff, #fff, #fff, #fff;
+$defaultTagBackgrounds: #008B36, #4BA52A, #93BF1F;
+$defaultTagColors: #fff, #fff, #fff;
 
 /*
 *   Global style
@@ -11,18 +11,18 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #f5f5fa;
+    --body-background: #173F35;
 
-    --accent-color: #34495e;
-    --accent-color-darker: #2c3e50;
+    --accent-color: #93BF1F;
+    --accent-color-darker: #4BA52A;
     --accent-color-text: #fff;
-    --body-text-color: #bababa;
+    --body-text-color: #ebebeb;
 
-    --tag-border-radius: 4px;
+    --tag-border-radius: 20px;
 
     --section-separation: 40px;
 
-    --scrollbar-thumb: hsl(0, 0%, 85%);
+    --scrollbar-thumb: hsla(0, 0%, 85%, 0.5);
     --scrollbar-track: var(--body-background);
 
     &[data-scheme="dark"] {
@@ -43,7 +43,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --sys-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
     --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
 
-    --base-font-family: "Lato", var(--sys-font-family), var(--zh-font-family), sans-serif;
+    --base-font-family: "Public Sans", var(--sys-font-family), var(--zh-font-family), sans-serif;
     --code-font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
@@ -56,10 +56,10 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
     --card-text-color-main: #000;
     --card-text-color-secondary: #747474;
-    --card-text-color-tertiary: #bababa;
+    --card-text-color-tertiary: #a6a6a6;
     --card-separator-color: rgba(218, 218, 218, 0.5);
 
-    --card-border-radius: 10px;
+    --card-border-radius: 20px 0px 20px 0px;
 
     --card-padding: 20px;
 
