--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -1,10 +1,10 @@
 {{ define "body-class" }}template-archives{{ end }}
 {{ define "main" }}
     <header>
-        {{- $taxonomy := $.Site.GetPage "taxonomyTerm" "categories" -}}
+        {{- $taxonomy := $.Site.GetPage "taxonomyTerm" "categorias" -}}
         {{- $terms := $taxonomy.Pages -}}
         {{ if $terms }}
-        <h2 class="section-title">{{ $taxonomy.Title }}</h2>
+        <h2 class="section-title">{{  T "widget.categoriesCloud.title" }}</h2>
         <div class="subsection-list">
             <div class="article-list--tile">
                 {{ range $terms }}
