--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -32,13 +32,13 @@
         {{ end }}
         
         <div class="site-meta">
-            <h1 class="site-name"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></h1>
+            <h1 class="site-name" style="font-size:3.5rem"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></h1>
             <h2 class="site-description">{{ .Site.Params.sidebar.subtitle }}</h2>
         </div>
     </header>
 
     {{- with .Site.Menus.social -}}
-        <ol class="social-menu">
+        <ol class="social-menu" style="margin-top: 12px; margin-bottom: 12px;">
             {{ range . }}
                 <li>
                     <a 
@@ -46,6 +46,7 @@
                         {{ if eq (default true .Params.newTab) true }}target="_blank"{{ end }}
                         {{ with .Name }}title="{{ . }}"{{ end }}
                         rel="me"
+                        style="color: #ebebeb; fill:#ebebeb; margin-right: 3px"
                     >
                         {{ $icon := default "link" .Params.Icon }}
                         {{ with $icon }}
