--- a/layouts/partials/widget/tag-cloud.html
+++ b/layouts/partials/widget/tag-cloud.html
@@ -4,7 +4,7 @@
     <div class="widget-icon">
         {{ partial "helper/icon" "tag" }}
     </div>
-    <h2 class="widget-title section-title">{{ T "widget.tagCloud.title" }}</h2>
+    <h2 class="widget-title section-title" style="margin-top: 2px;">{{ T "widget.tagCloud.title" }}</h2>
 
     <div class="tagCloud-tags">
         {{ range first $limit $context.Site.Taxonomies.tags.ByCount }}
