melhorias nas sombras

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -59,7 +59,7 @@ $defaultTagColors: #fff, #fff, #fff;
     --card-text-color-tertiary: #a6a6a6;
     --card-separator-color: rgba(218, 218, 218, 0.5);
 
-    --card-border-radius: 20px 0px 20px 0px;
+    --card-border-radius: 20px 2px 20px 2px;
 
     --card-padding: 20px;
 
@@ -140,7 +140,7 @@ $defaultTagColors: #fff, #fff, #fff;
 */
 :root {
     --shadow-l1: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
-    --shadow-l2: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+    --shadow-l2: #93BF1F 2px 2px 0px 5px;
     --shadow-l3: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
     --shadow-l4: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
         0px 0px 1px rgba(0, 0, 0, 0.04);
