--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -12,7 +12,7 @@
         border-radius: var(--card-border-radius);
         overflow: hidden;
 
-        transition: box-shadow 0.3s ease;
+        transition: box-shadow 0.2s ease-out;
 
         &:hover {
             box-shadow: var(--shadow-l2);
