melhorias estéticas no blog

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,7 +11,8 @@ $defaultTagColors: #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #173F35;
+    --body-background:  #173f35;
+    --body-bg-image: url("/blog/img/pattern1.svg");
 
     --accent-color: #93BF1F;
     --accent-color-darker: #4BA52A;
