--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -32,7 +32,7 @@
         {{ end }}
         
         <div class="site-meta">
-            <h1 class="site-name" style="font-size:3.5rem"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></h1>
+            <h1 class="site-name" style="font-size:3.5rem; font-family:'Public Sans'"><a href="{{ .Site.BaseURL | relLangURL }}">Blog da Biosensu</a></h1>
             <h2 class="site-description">{{ .Site.Params.sidebar.subtitle }}</h2>
         </div>
     </header>
