--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,12 +15,12 @@
                 {{- $hasWidget = true -}}
             {{- end -}}
         {{- end -}}
-        <div class="container main-container flex on-phone--column {{ if $hasWidget }}extended{{ else }}compact{{ end }}">
+        <div class="container main-container flex on-phone--column {{ if $hasWidget }}extended{{ else }}compact{{ end }}" role="none">
             {{- block "left-sidebar" . -}}
                 {{ partial "sidebar/left.html" . }}
             {{- end -}}
             {{- block "right-sidebar" . -}}{{ end }}
-            <main class="main full-width">
+            <main class="main full-width" role="none">
                 {{- block "main" . }}{{- end }}
             </main>
         </div>
