--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,6 +1,6 @@
 {{- $ThemeVersion := "3.16.0" -}}
-<footer class="site-footer">
-    <section class="copyright">
+<footer class="site-footer" aria-label="rodapé">
+    <section class="copyright" aria-label="copyright">
         &copy; 
         {{ if and (.Site.Params.footer.since) (ne .Site.Params.footer.since (int (now.Format "2006"))) }}
             {{ .Site.Params.footer.since }} - 
@@ -8,7 +8,7 @@
         {{ now.Format "2006" }} Biosensu
     </section>
     
-    <section class="powerby">
+    <section class="powerby" aria-label="créditos">
         {{ with .Site.Params.footer.customText }}
             {{ . | safeHTML }} <br/>
         {{ end }}
@@ -17,7 +17,7 @@
         {{- $Theme := printf `adaptado de <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="%s">Stack</a></b>` $ThemeVersion -}}
         {{- $DesignedBy := `<a href="https://jimmycai.com" target="_blank" rel="noopener">Jimmy</a>` -}}
 
-        {{ T "footer.builtWith" (dict "Generator" $Generator) | safeHTML }} <br />
+        {{ T "footer.builtWith" (dict "Generator" $Generator) | safeHTML }} <br aria-hidden="true" />
         {{ T "footer.designedBy" (dict "Theme" $Theme "DesignedBy" $DesignedBy) | safeHTML }}
     </section>
 </footer>
