--- a/layouts/partials/helper/icon.html
+++ b/layouts/partials/helper/icon.html
@@ -1,6 +1,8 @@
+<span aria-hidden="true">
 {{- $iconFile := resources.GetMatch (printf "icons/%s.svg" .) -}}
 {{- if $iconFile -}}
     {{- $iconFile.Content | safeHTML -}}
 {{- else -}}
     {{- errorf "Error: icon '%s.svg' is not found under 'assets/icons' folder" . -}}
 {{- end -}}
+</span>
