--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -1,11 +1,11 @@
-<aside class="sidebar left-sidebar sticky {{ if .Site.Params.sidebar.compact }}compact{{ end }}">
+<aside aria-label="painel esquerdo" class="sidebar left-sidebar sticky {{ if .Site.Params.sidebar.compact }}compact{{ end }}">
     <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="{{ T `toggleMenu` }}">
-        <span class="hamburger-box">
+        <span class="hamburger-box" aria-hidden="true">
             <span class="hamburger-inner"></span>
         </span>
     </button>
 
-    <header>
+    <header role="none">
         {{ with .Site.Params.sidebar.avatar }}
             {{ if (default true .enabled) }}
             <figure class="site-avatar">
@@ -38,7 +38,7 @@
     </header>
 
     {{- with .Site.Menus.social -}}
-        <ol class="social-menu" style="margin-top: 12px; margin-bottom: 12px;">
+        <ol class="social-menu" style="margin-top: 12px; margin-bottom: 12px;" aria-label="ícones sociais">
             {{ range . }}
                 <li>
                     <a 
@@ -58,11 +58,11 @@
         </ol>
     {{- end -}}
 
-    <ol class="menu" id="main-menu">
+    <ol class="menu" id="main-menu" aria-label="Páginas do Blog">
         {{ $currentPage := . }}
         {{ range .Site.Menus.main }}
         {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
-        <li {{ if $active }} class='current' {{ end }}>
+        <li role="none" {{ if $active }} class='current' {{ end }}>
             <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
                 {{ $icon := default .Pre .Params.Icon }}
                 {{ if .Pre }}
