--- a/layouts/partials/widget/toc.html
+++ b/layouts/partials/widget/toc.html
@@ -1,11 +1,11 @@
 {{ if (.Context.Scratch.Get "TOCEnabled") }}
-    <section class="widget archives">
+    <section class="widget archives" role="none">
         {{/*  <div class="widget-icon">
             {{ partial "helper/icon" "hash" }}
         </div>  */}}
         <h2 class="widget-title section-title">{{ T "article.tableOfContents" }}</h2>
         
-        <div class="widget--toc">
+        <div class="widget--toc" role="none">
             {{ .Context.TableOfContents }}
         </div>
     </section>
