--- a/layouts/partials/article-list/tile.html
+++ b/layouts/partials/article-list/tile.html
@@ -30,10 +30,13 @@
             </div>
         {{ end }}
 
-        <div class="article-details">
-            <h2 class="article-title">
-                {{- .context.Title -}}
-            </h2>
+        <div class="article-details" style="padding: 0;">
+            <div style="display: flex;
+            background: linear-gradient(11deg, rgba(4, 116, 43, 0.8) 0%, rgba(4, 104, 39, 0.4) 100%); ; height:100%; padding: 2rem;">
+                <h2 class="article-title">
+                    {{- .context.Title -}}
+                </h2>
+            </div>
         </div>
     </a>
 </article>
