--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,14 +29,17 @@
     {{ if .Params.links }}
         {{ partial "article/components/links" . }}
     {{ end }}
-    
+
+    {{ partialCached "btnConheca" . }} 
+    <section style="display: block; width: 100%; padding: 5px">
+        {{ partial "helper/socialShare" . }}
+    </section>
     {{ partial "article/components/related-content" . }}
      
     {{ if not (eq .Params.comments false) }}
         {{ partial "comments/include" . }}
     {{ end }}
 
-     {{ partialCached "btnConheca" . }} 
 
     {{ partialCached "footer/footer" . }}
 
