design mais limpo

--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -45,7 +45,7 @@
         </footer>
     {{ end }}
 
-    {{ if .Params.categorias }}
+    <!-- {{ if .Params.categorias }}
     <footer class="article-category" aria-label="categorias do artigo">
         {{ range (.GetTerms "categorias") }}
             <a href="{{ .RelPermalink }}" {{ with .Params.style }}style="background-color: {{ .background }}; color: {{ .color }};"{{ end }}>
@@ -53,6 +53,6 @@
             </a>
         {{ end }}
     </footer>
-    {{ end }}
+    {{ end }} -->
 
 </div>
